--- a/src/Explore.css
+++ b/src/Explore.css
@@ -21,6 +21,7 @@
   border-radius: 10px;
   border: 4px solid gray;
   overflow: hidden;
+  position: relative;
 }
 
 .song-image {
@@ -54,4 +55,39 @@
 .dislike-button:hover,
 .like-button:hover {
   background-color: gray;
+}
+
+.start-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.pause-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(255,255,255, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.dislike-button:disabled,
+.like-button:disabled {
+  background-color: #808080;
+  cursor: not-allowed;
+}
+
+.dislike-button:hover:disabled,
+.like-button:hover:disabled {
+  background-color: #808080;
 }
