add better interface, algorithm for choosing the next song

--- a/src/CSS files/Library.css
+++ b/src/CSS files/Library.css
@@ -1,6 +1,6 @@
 .library-page {
   text-align: center;
-  background-image: url("../poze/fundalLogin.jpg");
+  background-color: rgba(40,41,45,1);
   height: 100vh;
   display: flex;
   justify-content: center;
