--- a/src/CSS files/Explore.css
+++ b/src/CSS files/Explore.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url("../poze/fundalLogin.jpg");
+  background-color: rgba(40,41,45,1);
 }
 
 .song-container {
@@ -16,12 +16,13 @@
 
 .image-wrapper {
   margin: auto;
-  width: 50%;
+  width: 48%;
   height: 99%;
   border-radius: 10px;
-  border: 4px solid gray;
+  border: 4px solid #1f1f1f;
   overflow: hidden;
   position: relative;
+  object-fit: contain;
 }
 
 .song-image {
@@ -39,22 +40,24 @@
 
 .dislike-button,
 .like-button {
-  background-color: black;
+  background-color: white;
   border: none;
-  color: white;
-  padding: 10px 20px;
+  color: black;
+  padding: 10% 20%;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
+  font-size: 22px;
+  margin-left:15%;
+  margin-right:15%;
   cursor: pointer;
   border-radius: 4px;
 }
 
 .dislike-button:hover,
 .like-button:hover {
-  background-color: gray;
+  background-color: black;
+  color:white;
 }
 
 .start-overlay {
@@ -66,7 +69,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0,0,0,1);
+}
+.start-overlay img {
+  margin-bottom:50%;
+}
+.playButton {
+  max-width:30%;
+  position:absolute;
+  margin-top:90%;
 }
 
 .pause-overlay {
