--- a/src/CSS files/Login.css
+++ b/src/CSS files/Login.css
@@ -1,94 +1,81 @@
-/* Default styles for the login page */
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
 .login-page {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    position:relative;
     box-sizing: border-box;
-    background-image: url("../poze/fundalLogin.jpg");
-    background-size: cover;
+    background-color: rgba(40,41,45,1);
+    overflow: hidden;
+  }
+  .circle {
+    position: absolute;
+    transform: translateY(55%);
+    width: 100%;
+    padding-bottom: 75%;
+    background-image: linear-gradient(to bottom, gray, #40ff00 80%);
+    border-radius: 100%;
+    background-color: red;
+    z-index: 0;
+  }
+  .logo-container {
+    position: absolute;
+    top:-15%;
+    left: -1%;
   }
   
+  .logo-container img {
+    max-width: 65%;
+    height: auto;
+  }
   .login-container {
+    z-index: 1;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(128, 128, 128, 0.5);
-    height: 60%;
-    width: 35%;
-    border-radius: 15px;
+    flex-direction: column; 
+  }
+  .header-big {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 76px;
+    color:white;
+    text-align:center;
+    font-weight: bold;
+    margin-top:0%;
   }
   
-  .login-card {
-    background-color: rgba(256, 256, 256, 0.9);
-    padding: 24px;
-    border-radius: 3%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    justify-content: center;
-    height: 75%;
+  .header-small {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    text-align:center;
+    color:white;
+    margin-bottom: 10px; 
+    margin-top:0%;
   }
-  
-  .login-header {
+
+  .button {margin-top:15%;
+    background-color: #1DB954; 
+    color: #fff; 
+    font-size: 30px;
+    padding: 12px 24px; 
+    border-radius: 50px; 
+    border: none; 
+    cursor: pointer;
     text-align: center;
-    margin-left: 37%;
-    margin-right: 37%;
   }
   
-  .button-login {
-   display:flex;
-   justify-content: center;
-   align-items:center;
+  .button:hover {
+    background-color: rgba(40,41,45,1); 
   }
-  .button-sign {
-    display:flex;
-    justify-content: center;
-    align-items:center;
-    margin-top:5%;
-   }
-   .button-sign-in {
-       display:flex;
-       justify-content: center;
-       align-items:center;
-   }
-  .signup-card {
-    background-color: rgba(256, 256, 256, 0.9);
-    padding: 24px;
-    border-radius: 3%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    justify-content: center;
-    height: 75%;
-  }
-  
-  .signup-header {
-    text-align: center;
-    margin-left: 33%;
-    margin-right: 33%;
-  }
-  
-  .signup-form {
-    margin-top: 24px;
-  }
-  
-  .signup-form-forgot {
-    float: right;
-  }
-  
-  .signup-form-button {
-    width: 100%;
-  }
-  
   body {
     margin: 0;
     padding: 0;
   }
   
-/* Default styles for the login page */
-
-/* ... (your existing CSS code) ... */
-
-/* Media queries for phone screens */
 @media screen and (max-width: 480px) {
     .login-container {
       width: 90%;
