--- a/src/CSS files/Library.css
+++ b/src/CSS files/Library.css
@@ -9,19 +9,6 @@
   align-items: center;
   font-family: 'Orbitron', sans-serif;
 }
-
-.library-card {
-  background-color: #1f1f1f;
-  border-radius: 1%;
-  padding: 2%;
-  box-shadow: 0 1% 1.5% rgba(0, 0, 0, 0.2);
-  width: 80%;
-  height: 80%;
-  margin: 0 auto;
-  margin-left:10%;
-  overflow-y: auto;
-}
-
 .library-header {
   font-size: 2rem;
   margin-bottom: 1.5rem;
@@ -33,61 +20,50 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2.5%;
-  overflow-y: auto;
-  width: 100%;
+  width: 80%;
+}
+
+.library-container .ant-table {
+  background-color: #1f1f1f;
+  color: GRAY;
+}
+
+.library-container .ant-table-thead > tr > th {
+  background-color: #1f1f1f;
+  color: gray;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Orbitron', sans-serif;
+  font-size:150%;
+}
+
+.library-container .ant-table-tbody > tr > td {
+  font-size:200%;
 }
 
 .song-card {
-  width: calc(23% - 1%);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.5%;
-  background-color: white;
-  box-shadow: 0 0.5% 1% rgba(0, 0, 0, 0.1);
-  border-radius: 1%;
-  margin-bottom:2%;
-  overflow: hidden;
-  transition: transform 0.3s ease;
+  width: 70%;
+  height: 70%;
+  object-fit: cover;
 }
-
 .song-card:hover {
   transform: translateY(-0.5%);
 }
 
-.song-card img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
-
-.song-info {
-  text-align: center;
-  padding: 0.5%;
-}
-
 .song-info button {
-    margin-left: 5px;
-    margin-bottom: 5px;
+    margin: auto;
     font-family: 'Orbitron', sans-serif;
+    width:100%;
 }
 
 .delete-button {
   background-color:rgba(255, 0, 0, 1);
+  padding-top:5%;
+  padding-bottom:5%;
 }
 
 .spotify-button {
   background-color:#40ff00;
-}
-
-.song-info h3 {
-  font-size: 1rem;
-  margin-bottom: 0.2rem;
-  color: #3a3a3a;
-}
-
-.song-info p {
-  font-size: 0.9rem;
-  color: #828282;
+  padding-top:5%;
+  padding-bottom:5%;
 }
